# VictronSolarDisplayEsp

./: .gitignore  CMakeLists.txt  README.md  battery-monitor-feature.md  config.env  partitions.csv  sdkconfig
components/config_storage/: config_storage.c
components/config_storage/include/: config_storage.h
components/lvgl/: lv_conf.h
components/victron_ble/: CMakeLists.txt  victron_ble.c
components/victron_ble/include/: victron_ble.h
components/victron_display_bsp/: CMakeLists.txt  idf_component.yml
config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
docs/: extra-manufacturer-data-2022-12-14.txt  framebuffer.raw
files/: index.html  style.css
main/: CMakeLists.txt  config_server.c  config_storage.c  config_storage.h  esp_bsp.c  esp_bsp.h  idf_component.yml  lv_port.c  main.c  main_simple.c  simple_display.c  simple_display.h  ui.c  ui.h  ui_bars.c  ui_bars.h  victron_ble.c  victron_ble.h
main/ui/: info_panel.c  info_panel.h  relay_panel.c  relay_panel.h  settings_panel.c  settings_panel.h  ui_format.c  ui_state.h  view_battery.c  view_battery.h  view_battery_monitor.c  view_registry.c  view_registry.h  view_simple.c  view_solar.c  view_solar.h  view_solar_charger.c
scripts/: collect_release.sh
